2015-08-29  Mike Frysinger  <vapier@gentoo.org>

	[BZ #4404]
	* po/de.po: Fix SIGALRM typo.

2015-08-28  James Perkins  <james@loowit.net>

	* time/tst-strptime2.c (tests): Replace short list of test
	strings for strptime %z specifier with code which exhaustively
	tests every combination of sign and 0 to 5 digits. Tests for
	rejection of invalid strings.

2015-08-28  James Perkins  <james@loowit.net>

	[BZ #16141]
	* time/strptime_l.c (__strptime_internal): Fix %z minutes
	calculation, removing incorrect decimal time rounding, so that
	all minute values result in a valid seconds value.
	* time/strptime_l.c (__strptime_internal): Extend %z time zone
	offset range limits to UTC-99:59 through UTC+99:59 to parse
	current and historical use cases.
	* time/tst-strptime2.c (tests): Modify and add tests for the
	strptime %z input field descriptor, specifically conversion of
	minutes to seconds and validating an offset range of -9959 to
	+9959.

2015-08-27  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #18877]
	* posix/Makefile (tests): Add tst-mmap-offset.
	* posix/tst-mmap.c: New file.
	* sysdeps/unix/sysv/linux/generic/wordsize-32/mmap.c (__mmap): Fix
	offset calculation for negative values.

2015-08-27  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/init-arch.h: New file.
	* sysdeps/i386/i586/init-arch.h: Likewise.
	* sysdeps/i386/i686/init-arch.h: Likewise.
	* sysdeps/x86/cpu-features.c (init_cpu_features): Set bit_I586
	bit if CX8 is available.  Set bit_I686 bit if CMOV is available.
	* sysdeps/x86/cpu-features.h (bit_I586): New.
	(bit_I686): Likewise.
	(bit_CX8): Likewise.
	(bit_CMOV): Likewise.
	(index_CX8): Likewise.
	(index_CMOV): Likewise.
	(index_I586): Likewise.
	(index_I686): Likewise.
	(reg_CX8): Likewise.
	(reg_CMOV): Likewise.
	(HAS_I586): Defined as HAS_ARCH_FEATURE (I586) if i586 isn't
	available at compile-time.
	(HAS_I686): Defined as HAS_ARCH_FEATURE (I686) if i686 isn't
	available at compile-time.